tests/rosetta/out/Fortran/bulls-and-cows.f90
! Generated by Mochi compiler v0.10.28 on 2006-01-02T15:04:05Z
program bulls_and_cows
  implicit none
    integer :: i
    integer :: arr
    integer :: j
    integer :: tmp
    integer, dimension(9) :: digits
    integer :: pat
    character(len=100) :: valid
    integer :: guess
    integer :: cows
    integer :: bulls
    character(len=100) :: seen
    logical :: malformed
    integer :: cg
    integer :: pos
      character(len=100) :: s0
      character(len=100) :: s1
  call main()
  
  contains
  recursive integer function indexOf(s,ch) result(res)
    character(len=100), intent(in) :: s
    character(len=100), intent(in) :: ch
    i = 0
    do while ((i < size(s)))
      if ((s(i+1:(i + 1)) == ch)) then
        res = i
        return
      end if
      i = (i + 1)
    end do
    res = -1
    return
  end function indexOf
  recursive integer function shuffle(xs) result(res)
    integer, intent(in) :: xs
    arr = xs
    i = (size(arr) - 1)
    do while ((i > 0))
      j = mod(now(),((i + 1)))
      tmp = arr(((i)+1))
      arr(((i)+1)) = arr(((j)+1))
      arr(((j)+1)) = tmp
      i = (i - 1)
    end do
    res = arr
    return
  end function shuffle
  recursive subroutine main()
    print *, 'Cows and Bulls'
    print *, 'Guess four digit number of unique digits in the range 1 to 9.'
    print *, 'A correct digit but not in the correct place is a cow.'
    print *, 'A correct digit in the correct place is a bull.'
    digits = (/'1','2','3','4','5','6','7','8','9'/)
    digits = shuffle(digits)
    pat = (((digits(((0)+1)) + digits(((1)+1))) + digits(((2)+1))) + digits(((3)+1)))
    valid = '123456789'
    do while (.true.)
      print *, 'Guess: '
      guess = input()
      if ((size(guess) /= 4)) then
        print *, 'Please guess a four digit number.'
        cycle
      end if
      cows = 0
      bulls = 0
      seen = ''
      i = 0
      malformed = .false.
      do while ((i < 4))
        cg = guess(i+1:(i + 1))
        if ((indexOf(seen,cg) /= (-1))) then
          print *, 'Repeated digit: ' // cg
          malformed = .true.
          exit
        end if
        seen = (seen + cg)
        pos = indexOf(pat,cg)
        if ((pos == (-1))) then
          if ((indexOf(valid,cg) == (-1))) then
            print *, 'Invalid digit: ' // cg
            malformed = .true.
            exit
          end if
        else
          if ((pos == i)) then
            bulls = (bulls + 1)
          else
            cows = (cows + 1)
          end if
        end if
        i = (i + 1)
      end do
      if (malformed) then
        cycle
      end if
      write(s0,'(G0)') cows
      write(s1,'(G0)') bulls
      print *, trim(trim('Cows: ' // s0) // ', bulls: ') // s1
      if ((bulls == 4)) then
        print *, 'You got it.'
        exit
      end if
    end do
  end subroutine main
end program bulls_and_cows
